@@ -1,11 +1,11 @@
 package lt.lb.filemanagerlb.logic;
 
 import java.io.File;
+import java.util.ArrayDeque;
 import java.util.Arrays;
 import java.util.List;
 import java.util.ArrayList;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.Objects;
 import lt.lb.filemanagerlb.gui.FileManagerLB;
 import org.apache.commons.lang3.StringUtils;
@@ -18,17 +18,13 @@ import org.apache.commons.lang3.StringUtils;
 public class LocationInRoot {
 
     private boolean upperCase;
-    public LinkedList<String> coordinates = new LinkedList<>();
+    private final List<String> coordinates;
 
-    private LocationInRoot() {
-
-    }
-
-    private LinkedList<String> resolveFromString(LinkedList<String> co, String filePath, boolean doUpperCase) {
+    private void resolveFromString(List<String> co, String filePath, boolean doUpperCase) {
         String rootLoc = "";
         if (!filePath.isEmpty()) {
             for (String s : FileManagerLB.getRootSet()) {
-                if (StringUtils.containsIgnoreCase(filePath, s)) {
+                if (StringUtils.startsWithIgnoreCase(filePath, s)) {
                     rootLoc = s;
                     break;
                 }
@@ -36,54 +32,48 @@ public class LocationInRoot {
             }
             rootLoc = rootLoc.toUpperCase();
             co.add(rootLoc);
-            if (!filePath.equalsIgnoreCase(rootLoc)) {
+            if (!filePath.equalsIgnoreCase(rootLoc)) {//more than root
                 if (doUpperCase) {
                     filePath = StringUtils.upperCase(filePath);
                 }
-                filePath = StringUtils.replaceOnce(filePath, rootLoc, "");
+                filePath = StringUtils.removeStart(filePath, rootLoc);
                 String[] fileArray = StringUtils.split(filePath, File.separatorChar);
-                List<String> asList = Arrays.asList(fileArray);
-                ArrayList<String> list = new ArrayList<>();
-                list.addAll(asList);
-
-                Iterator<String> iterator = list.iterator();
-                while (iterator.hasNext()) {
-                    String next = iterator.next();
-                    if (next.isEmpty()) {
-                        iterator.remove();
+                for(String next:fileArray){
+                    if (!StringUtils.isBlank(next)) {
+                        co.add(next);
                     }
                 }
-                co.addAll(list);
             }
             //Log.writeln(coordinates);
         }
-        return co;
     }
 
     public LocationInRoot(String path) {
         this.upperCase = true;
-        this.coordinates = resolveFromString(this.coordinates, path, true);
+        coordinates = new ArrayList<>();
+        resolveFromString(coordinates, path, true);
     }
 
     public LocationInRoot(String path, boolean doUppercase) {
         this.upperCase = doUppercase;
-        this.coordinates = resolveFromString(this.coordinates, path, doUppercase);
+        coordinates = new ArrayList<>();
+        resolveFromString(coordinates, path, doUppercase);
     }
 
     public LocationInRoot(LocationInRoot loc) {
         this.upperCase = loc.upperCase;
+        coordinates = new ArrayList<>();
         this.coordinates.addAll(loc.coordinates);
     }
 
     private LocationInRoot(List<String> coord, boolean upperCase) {
-        coordinates = new LinkedList<>();
-        coordinates.addAll(coord);
+        coordinates = new ArrayList<>(coord);
         this.upperCase = upperCase;
 
     }
 
     public String getName() {
-        if (this.coordinates.size() > 0) {
+        if (!this.coordinates.isEmpty()) {
             return this.coordinates.get(this.coordinates.size() - 1);
         } else {
             return "";
@@ -91,13 +81,12 @@ public class LocationInRoot {
     }
 
     public void setName(String name) {
-        this.coordinates.pollLast();
-        this.coordinates.addLast(name);
+        coordinates.set(coordinates.size()-1, name);
     }
 
     public LocationInRoot getRoot() {
-        LinkedList<String> list = new LinkedList<>();
-        list.add(this.coordinates.getFirst());
+        List<String> list = new ArrayList<>();
+        list.add(this.coordinates.get(0));
         list.add(this.coordinates.get(1));
         return new LocationInRoot(list, this.upperCase);
     }
@@ -111,7 +100,7 @@ public class LocationInRoot {
     }
 
     public LocationInRoot getParentLocation() {
-        LinkedList<String> list = new LinkedList<>();
+        List<String> list = new ArrayList<>();
         list.addAll(this.coordinates);
         list.removeLast();
         return new LocationInRoot(list, this.upperCase);
@@ -143,24 +132,27 @@ public class LocationInRoot {
         }
         if (o instanceof LocationInRoot) {
             LocationInRoot otherLoc = (LocationInRoot) o;
-            boolean same = otherLoc.length() == this.length();
-            if (!same) {
+            if (otherLoc.length() != this.length()) {
                 return false;
             }
-            if (this.upperCase || ((LocationInRoot) o).upperCase) {
-                for (int i = 0; i < this.length(); i++) {
-                    if (!this.at(i).equalsIgnoreCase(otherLoc.at(i))) {
-                        same = false;
+            boolean ignore = this.upperCase || otherLoc.upperCase;
+            Iterator<String> mine = this.coordinates.iterator();
+            Iterator<String> other = otherLoc.coordinates.iterator();
+
+            while (mine.hasNext() && other.hasNext()) {
+                String s1 = mine.next();
+                String s2 = other.next();
+                if (ignore) {
+                    if (!StringUtils.equalsIgnoreCase(s1, s2)) {
+                        return false;
                     }
-                }
-            } else {
-                for (int i = 0; i < this.length(); i++) {
-                    if (!this.at(i).equals(otherLoc.at(i))) {
-                        same = false;
+                } else {
+                    if (!StringUtils.equals(s1, s2)) {
+                        return false;
                     }
                 }
             }
-            return same;
+            return true;
         }
         return false;
     }
